add all changes related to PART I exam

--- a/cheatsheet_Part1.tex
+++ b/cheatsheet_Part1.tex
@@ -18,6 +18,7 @@
 \usepackage{microtype}
 \usepackage{pdfpages}
 \usepackage{bbm}
+\usepackage{amsfonts}
 
 
 \let\bar\overline
@@ -79,48 +80,27 @@
 % multicol parameters
 % These lengths are set only within the two main columns
 
-\input{content/probability_distributions}
-
+% Probability - Units 1-6, 8-9 of 6.431x Probability--the Science of Uncertainty and Data
 \input{content/expectation_variance}
 \input{content/Covariance_Matrix}
-
-
-
-
-
-
-\input{content/Models}
-\input{content/estimators}
 \input{content/Law_large_Numbers}
-\input{content/Quantiles}
+\input{content/Central_limit_theorem}
+% Statistics--Theory Exam - Unit 7 of 6.431x Probability--the Science of Uncertainty and Data
+\input{content/bayesian_inference}
+% Statistics--Theory Exam - All of 18.6501x Fundamentals of Statistics
+\input{content/Parameric_Models}
+\input{content/parametric_estimation}
 \input{content/Confidence_intervals}
+\input{content/Confidence_intervals_3_appch}
+\input{content/Delta_Method}
 \input{content/Hypothesis_tests}
-
-
-
-
 \input{content/Total_variation}
 \input{content/Likelihood}
 \input{content/Moments}
-\input{content/bayesian}
-\input{content/OLS}
-\input{content/Generalized_Linear_Models}
-
-
-\input{content/expectation_variance}
-%\input{content/Covariance_Matrix}
-
-
-
-\input{content/probability_distributions}
-%\input{content/Algebra}
-\input{content/notes}
+\input{content/algebra}
 \input{content/Multivariate_RV}
-\input{content/Algebra}
-\input{content/Covariance_Matrix}
 
-%\input{content/probability_distributions}
-%\input{content/Algebra}
+% Statistics--Theory Exam - Module 1 of 6.419x Data Analysis: Statistical Modeling and Computations in Applications
 
 \end{multicols}
 \end{document}
