--- a/cheatsheet_Part2_ML.tex
+++ b/cheatsheet_Part2_ML.tex
@@ -12,13 +12,13 @@
 \usetikzlibrary{shapes,positioning,arrows,fit,calc,graphs,graphs.standard}
 \usepackage[nosf]{kpfonts}
 \usepackage[t1]{sourcesanspro}
-\usepackage{multicol}
 \usepackage{wrapfig}
 \usepackage[framemethod=tikz]{mdframed}
 \usepackage{microtype}
 \usepackage{pdfpages}
 \usepackage{bbm}
-
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 
 \let\bar\overline
 
@@ -79,48 +79,7 @@
 % multicol parameters
 % These lengths are set only within the two main columns
 
-\input{content/probability_distributions}
-
-\input{content/expectation_variance}
-\input{content/Covariance_Matrix}
-
-
-
-
-
-
-\input{content/Models}
-\input{content/estimators}
-\input{content/Law_large_Numbers}
-\input{content/Quantiles}
-\input{content/Confidence_intervals}
-\input{content/Hypothesis_tests}
-
-
-
-
-\input{content/Total_variation}
-\input{content/Likelihood}
-\input{content/Moments}
-\input{content/bayesian}
-\input{content/OLS}
-\input{content/Generalized_Linear_Models}
-
-
-\input{content/expectation_variance}
-%\input{content/Covariance_Matrix}
-
-
-
-\input{content/probability_distributions}
-%\input{content/Algebra}
-\input{content/notes}
-\input{content/Multivariate_RV}
-\input{content/Algebra}
-\input{content/Covariance_Matrix}
-
-%\input{content/probability_distributions}
-%\input{content/Algebra}
+\input{content/Linear_Regression}
 
 \end{multicols}
 \end{document}
