--- a/content/Total_variation.tex
+++ b/content/Total_variation.tex
@@ -44,3 +44,4 @@ Does not satisfy triangle inequality in general: $KL(\mathbf{P}, \mathbf{V}) \nl
 \displaystyle  \text {KL}\left(\mathbf{P}_{\theta ^*}, \mathbf{P}_{\theta }\right)& = \mathbb {E}_{\theta ^*}\left[\ln \left(\frac{p_{\theta ^*}(X)}{p_{\theta }(X)}\right)\right]\\
 \widehat{KL}(\mathbf{P}_{\theta_{*}},\mathbf{P}_{\theta})& = const - \frac{1}{n} \sum_{i=1}^{n} log(p_{\theta}(X_i))
 \end{align*}
+\textit{maximize the above equation can derive the maximum likelihood}
