--- a/content/expectation_variance.tex
+++ b/content/expectation_variance.tex
@@ -1,12 +1,12 @@
 \section{Expectation}
 
-$\mathbb{E}\left[X\right]=\int_{-inf}^{+inf}{x \cdot f_X\left(x\right)\ \ dx}$\\
-
-$\mathbb{E}\left[g\left(X\right)\right]=\int_{-inf}^{+inf}{g\left(x\right) \cdot f_X\left(x\right)dx}$\\
-
-$\mathbb{E}\left[X\middle| Y=y\right]=\int_{-inf}^{+inf}{x \cdot { f}_{X|Y}\left(x|y\right)\ \ dx}$\\
-
-Integration limits only have to be over the support of the pdf. Discrete r.v. same as continuous but with sums and pmfs.\\
+%$\mathbb{E}\left[X\right]=\int_{-inf}^{+inf}{x \cdot f_X\left(x\right)\ \ dx}$\\
+%
+%$\mathbb{E}\left[g\left(X\right)\right]=\int_{-inf}^{+inf}{g\left(x\right) \cdot f_X\left(x\right)dx}$\\
+%
+%$\mathbb{E}\left[X\middle| Y=y\right]=\int_{-inf}^{+inf}{x \cdot { f}_{X|Y}\left(x|y\right)\ \ dx}$\\
+%
+%Integration limits only have to be over the support of the pdf. Discrete r.v. same as continuous but with sums and pmfs.\\
 
 Total expectation theorem:\\
 
@@ -16,9 +16,13 @@ Law of iterated expectation:\\
 
 $\mathbb E[Y] = \mathbb E[\mathbb E[Y\rvert {X}]]$\\
 
-Expectation of constant $a$:\\
+%Expectation of constant $a$:\\
+%
+%$\mathbb{E}[a] = a$\\
 
-$\mathbb{E}[a] = a$\\
+Law of total expectation: \\
+
+$\mathbb{E}[Y] = \sum_n{p_{N}(n)\mathbb{E}[Y|N=n]}$\\
 
 Product of \textbf{independent} r.vs $X$ and $Y$ :\\
 
@@ -36,16 +40,20 @@ $\mathbb{E}[aX + c Y] = a\mathbb{E}[X] + c\mathbb{E}[Y]$\\
 
 If Variance of $X$ is known:\\
 
-$\mathbb{E}[X^2] = var(X) - \mathbb{E}[X]$\\
+$\mathbb{E}[X^2] = var(X) - \mathbb{E}[X]^2$\\
 
 
 \section{Variance}
 
 Variance is the squared distance from the mean.\\
 
-$Var(X)=\mathbb{E}[(X-\mathbb{E}(X))^2]$\\
+$Var(X)=\mathbb{E}[(X-\mathbb{E}[X])^2]$\\
 
-$Var\left(X\right)=\mathbb{E}\left[X^2\right]-\left(\mathbb{E}\left[X\right]\right)^2$\\
+Law of total variance
+
+$Var(X)=\mathbb{E}[Var(X|Y)] + Var(\mathbb{E}[X|Y])$\\
+
+%$Var\left(X\right)=\mathbb{E}\left[X^2\right]-\left(\mathbb{E}\left[X\right]\right)^2$\\
 
 Variance of a product with constant $a$:\\
 
@@ -54,6 +62,10 @@ $Var(aX)=a^2 Var\left(X\right)$\\
 Variance of sum of two \textbf{dependent} r.v.:\\
 
 $Var(X + Y)=Var(X)+Var(Y)+2Cov(X,Y)$\\
+
+Variance of sum of n \textbf{dependent} r.v.:\\
+
+$Var(X_{1}+X_{2}+...+X_{n})=\sum_{i=1}^{n} Var(X_{i})+\sum_{i\neq j} Cov(X_{i},X_{j})$\\
 
 Variance of sum/difference of two \textbf{independent} r.v.:\\
 
@@ -69,7 +81,7 @@ $Cov(X,Y) = \mathbb E[(X - \mu _ X)(Y - \mu _ Y)]$ \\
 
 $Cov(X,Y) = \mathbb E[XY] - \mathbb E[X]\mathbb E[Y] $\\
 
-$ Cov(X,Y)= \displaystyle  \mathbb E[(X)(Y-\mu _ Y)]$\\
+%$ Cov(X,Y)= \displaystyle  \mathbb E[(X)(Y-\mu _ Y)]$\\
 
 Possible notations:\\
 
@@ -96,3 +108,4 @@ If $Cov(X,Y) = 0$, we say that X and Y are uncorrelated. If $X$ and $Y$ are inde
 \section{correlation coefficient}
 
 $\rho(X,Y) = \frac{Cov(X,Y)}{\sqrt{Var(X}Var(Y}$
+Import properties of $\rho: -1 \leq \rho \leq 1$
